--- a/src/_includes/components/9form.html
+++ b/src/_includes/components/9form.html
@@ -14,6 +14,7 @@
         background-color: #fafafa;
         position: relative;
         z-index: 1;
+        padding-top: 50px;
     }
     #contact-587 .cs-container {
         width: 100%;
